// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the Icon matches the snapshot 1`] = `
<svg
  aria-hidden="true"
  className="sc-bdVaJa jCwthi"
  focusable="false"
  role="img"
/>
`;

exports[`the IconWithAriaLabel matches the snapshot 1`] = `
<span
  aria-label="This is an aria label"
  role="img"
>
  <svg
    aria-hidden="true"
    className="sc-bwzfXH fWnAvQ"
    focusable="false"
    role="presentation"
  />
</span>
`;
